--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.69.0",
     "react-icons": "^5.5.0",
     "react-pro-sidebar": "^1.1.0",
+    "react-responsive-pagination": "^2.12.0",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.18"
